--- a/repos/TestWork4/TestWork4/Views/Account/Edit.cshtml
+++ b/repos/TestWork4/TestWork4/Views/Account/Edit.cshtml
@@ -1,29 +1,44 @@
 ﻿@model TestWork4.Models.EditModel
-
 @{
-    ViewBag.Title = "Edit";
+    ViewBag.Title = "Изменить данные";
 }
 
-<h2>Редактировать данные профиля</h2>
+<h2>@ViewBag.Title</h2>
 
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-
+    <h4>Редактировать данные профиля</h4>
     <div>
         @Html.ValidationSummary(true, "")
         <div>
-            <p style="color:red">Изменения вступят в силу при следующем входе в аккаунт!</p>
-            <p>Имя: @Html.EditorFor(model => model.Name)</p>
-            <p>Фамилия: @Html.EditorFor(model => model.LastName)</p>
-            <p>Возраст: @Html.EditorFor(model => model.Age)</p>
-            <p>Город: @Html.EditorFor(model => model.City)</p>
+            <div class="form-group">
+                @Html.LabelFor(model => model.Name, new { @class = "col-md-2 control-label" })
+                <div class="col-md-10">
+                    @Html.TextBoxFor(model => model.Name, new { @class = "form-control" })
+                </div>
+            </div>
+            <div class="form-group">
+                @Html.LabelFor(model => model.LastName, new { @class = "col-md-2 control-label" })
+                <div class="col-md-10">
+                    @Html.TextBoxFor(model => model.LastName, new { @class = "form-control" })
+                </div>
+            </div>
+            <div class="form-group">
+                @Html.LabelFor(model => model.Age, new { @class = "col-md-2 control-label" })
+                <div class="col-md-10">
+                    @Html.TextBoxFor(model => model.Age, new { @class = "form-control" })
+                </div>
+            </div>
+            <div class="form-group">
+                @Html.LabelFor(model => model.City, new { @class = "col-md-2 control-label" })
+                <div class="col-md-10">
+                    @Html.TextBoxFor(model => model.City, new { @class = "form-control" })
+                </div>
+            </div>
         </div>
-
-        <div>
             <div>
                 <input type="submit" value="Сохранить" />
             </div>
-        </div>
     </div>
 }
