--- a/repos/TestWork4/TestWork4/Views/Manage/ManageLogins.cshtml
+++ b/repos/TestWork4/TestWork4/Views/Manage/ManageLogins.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Управление внешними именами входа";
 }
 
-<h2>@ViewBag.Title.</h2>
+<h2>@ViewBag.Title</h2>
 
 <p class="text-success">@ViewBag.StatusMessage</p>
 @{
